src/objects/BLP_Prework_Postwork__c.object
<CustomObject>
    <fields>
        <fullName>BLP_Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Format__c</fullName>
        <label>Format</label>
        <picklist>
            <picklistValues>
                <fullName>Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link to External Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist-Quiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Link_to_Content__c</fullName>
        <label>Link to Content</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BLP_Prework_Postwork_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prework Postwork Template</label>
        <referenceTo>BLP_Prework_Postwork_Template__c</referenceTo>
        <relationshipLabel>Prework Postwork</relationshipLabel>
        <relationshipName>Prework_Postwork</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLP_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postwork</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_User_To_Course__c</fullName>
        <label>User To Course</label>
        <referenceTo>BLP_User_To_Course__c</referenceTo>
        <relationshipLabel>Prework Postwork</relationshipLabel>
        <relationshipName>Prework_Postwork</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>$User.FirstName + $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <label>Prework Postwork</label>
    <nameField>
        <label>Prework Postwork Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prework Postwork</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>